# iscompression

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt
src/filtration/: wienerFilter.h
src/iscomp/: CMakeLists.txt  main.cpp
